--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 	</head>
 <body>
 	
-	<img style="float:left" weight="150" height="230" src="images\pranita.jpg">
+	<img style="float:left" weight="150" height="230" src="pranita.jpg">
 	<h1>&nbsp Pranita Kakasaheb Bhadange</h1>
 	<p>	&nbsp As an Engineering student I am constantly working towards improving my technical and non-technical skills, <br>&nbsp I am good at teamwork and  leadership qualities
 		and possess good problem-solving skills and creative thinking </p>
